# whines_crossfiledialog

./: .gitignore  .onedev-buildspec.yml  justfile  pyproject.toml  setup.py  test.py
.github/workflows/: publish.yml
crossfiledialog/: __init__.py  kdialog.py  qt.py  utils.py  win32.py  wrapper.py  zenity.py
crossfiledialog/file_pickers/: kdialog.py  pygobject.py  qt.py  win32.py  zenity.py
dev/: autodoc.mustache  sortspec.md
docs/: LICENSE  LICENSE.md  README.md  TODO.md  changelog.md  getting-started.md  installing-prerequisites.md  whats-wrong-right-now.md
docs/dev/: bump.md
whines_crossfiledialog/: __init__.py  strings.py  utils.py
whines_crossfiledialog/file_pickers/: kdialog.py  pygobject.py  qt.py  win32.py  zenity.py
