[tool.poetry]
name = "school"
version = "0.0.0"
description = ""
authors = ["whinee"]

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyqt5 = "^5.15.11"
pyqt6 = "^6.8.0"
vext-gi = "^0.7.4"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.13.0"
no-implicit-optional = "^1.4"
ruff = "^0.8.2"

[tool.mypy]
disable_error_code = [
    "import",
    "annotation-unchecked",
    "attr-defined",
    "no-untyped-call",
    "no-untyped-def",
    "type-arg",
    "unused-ignore",
]
strict = true
exclude = "dev"

[tool.ruff]
line-length = 88

target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"examples/*" = [
    "INP001",
    "N999"
]

[tool.ruff.lint]
select = [
    "ANN",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "D",
    # "DTZ",
    "E",
    "F",
    "I",
    "INP",
    "N",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "UP"
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
    "ANN",
    "B",
    "C4",
    "COM",
    "D",
    "E",
    "F",
    "I",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "UP"
]
unfixable = []

ignore = [
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN201",
    "ANN202",
    "ANN401",
    "B008",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D202",
    "D203",
    "D205",
    "D212",
    "D401",
    "D404",
    "D406",
    "D407",
    "D417",
    "E501",
    "F722",
    "I002",
    "N812",
    "N818",
    "Q000",
    "RET503",
    "S101",
    "UP007",
    "UP032",
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "pyenv",
    "venv",
]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = false